[package]
name = "khora"
version = "0.1.0"
authors = ["KGRC"]
edition = "2018"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

# cargo build
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "khora_usr"
path = "src/bin/khora_usr.rs"

[[bin]]
name = "khora_stk"
path = "src/bin/khora_stk.rs"

[[bin]]
name = "entrypoint_example"
path = "src/bin/entrypoint_example.rs"

[[bin]]
name = "gui_tester"
path = "src/bin/gui_tester.rs"

[dependencies]
curve25519-dalek = { version = "3", features = ["serde"] }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9.1"
merlin = "3.0.0"
rayon = "1.5.0"
byteorder = "1"
aes-gcm-siv = "0.10.2"
hmac = "0.10.1"
bytes = "0.5.6"
bincode = "1"
bit-vec = "0.6.3"
modinverse = "0.1.1"
polynomial-over-finite-prime-field = "0.3.1"
ahash = "0.7.4"
bimap = "0.6.1"
separator = "0.3.1"
plumcast = { path = "plumcast_used" }
fibers = "0.1"
fibers_rpc = "0.3"
futures = "0.1"
clap = "2"
fibers_global = "0.1"
sloggers = "0.3"
slog = "2"
trackable = "0.2"
crossbeam = "0.8.1"
getrandom = { version = "0.2", features = ["js"] }
# eframe = "0.15.0" # Gives us egui, epi and web+native backends
eframe = { version = "0.15.0", default-features = false, features = ["default_fonts", "egui_glow"] }

gip = "0.7.0"
local-ip-address = "0.4.4"
colored = "2.0.0"

[features]
default = ["persistence"]
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown

# modify rust-lang extension at
# ~/.config/Code/User/globalStorage/matklad.rust-analyzer/settings.json
# for linux
# info at https://github.com/rust-analyzer/rust-analyzer/blob/master/docs/user/manual.adoc
# doesn't seem to work tho...